objects/qbdialer__DialerQuery__c.object
<CustomObject>
    <description>Query Builder for use with the InsideSales.com Power Dialer.</description>
    <fields>
        <fullName>qbdialer__AdvancedFilter__c</fullName>
        <label>Advanced Filter</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Attendees__c</fullName>
        <label>Attendees</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>fsharenone</fullName>
                    <default>true</default>
                    <label>fsharenone</label>
                </value>
                <value>
                    <fullName>fshareall</fullName>
                </value>
                <value>
                    <fullName>fsharegroups</fullName>
                </value>
                <value>
                    <fullName>fshareusers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_action__c</fullName>
        <label>Callback Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_grace_period__c</fullName>
        <label>Callback_grace_period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallerIdType__c</fullName>
        <label>CallerIdType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Phone</fullName>
                    <default>true</default>
                    <label>Company Phone</label>
                </value>
                <value>
                    <fullName>Custom Number</fullName>
                </value>
                <value>
                    <fullName>LocalPresence</fullName>
                </value>
                <value>
                    <fullName>Rep Station Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Caller_Id__c</fullName>
        <description>Caller  Id used when making InsideSales phone calls to customers</description>
        <label>Caller Id</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>qbdialer__CampaignId__c</fullName>
        <label>CampaignId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CampaignMemberStatus__c</fullName>
        <label>CampaignMemberStatus</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CaseType__c</fullName>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case - Account</fullName>
                    <default>true</default>
                    <label>Case - Account</label>
                </value>
                <value>
                    <fullName>Case - Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__DataSource__c</fullName>
        <description>Determines whether the data source for this Dialer Query is based on filters or on a report</description>
        <label>Data Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Query</fullName>
                    <default>true</default>
                    <label>Query</label>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Description__c</fullName>
        <label>Description</label>
        <length>512</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qbdialer__DialerInitiativeId__c</fullName>
        <label>Dialer Initiative Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__EightHundred__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If unchecked, 800 numbers will be excluded from dialing.</description>
        <inlineHelpText>If unchecked, 800 numbers will be excluded from dialing.</inlineHelpText>
        <label>Call 800 Numbers:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__EmailFolders__c</fullName>
        <label>Email Folders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__EndTime__c</fullName>
        <label>End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Data_10__c</fullName>
        <label>Filter Data 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Data_1__c</fullName>
        <label>Filter Data 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Data_2__c</fullName>
        <label>Filter Data 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Field_10__c</fullName>
        <label>Filter Field 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Field_1__c</fullName>
        <label>Filter Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Field_2__c</fullName>
        <label>Filter Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Op_10__c</fullName>
        <label>Filter Op 10</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Op_1__c</fullName>
        <label>Filter Op 1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Filter_Op_2__c</fullName>
        <label>Filter Op 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__LimitCallingTimes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Limit Calling Times</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__LimitCallsTo__c</fullName>
        <label>LimitCallsTo</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>owner</fullName>
                </value>
                <value>
                    <fullName>all</fullName>
                    <default>true</default>
                    <label>all</label>
                </value>
                <value>
                    <fullName>account_teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__LimitEndTime__c</fullName>
        <label>Limit End Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__LimitStartTime__c</fullName>
        <label>Limit Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Local_Presence_Bucket__c</fullName>
        <label>Block</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__MaxDials__c</fullName>
        <label>Max Dials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__MinDials__c</fullName>
        <label>MinDials</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__MinutesBetweenCalls__c</fullName>
        <label>Minutes Between Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__NoPhoneNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__ObjectType__c</fullName>
        <label>Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                    <default>true</default>
                    <label>Lead</label>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__OnlyDialOwn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Dial Own</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__OpportunityType__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity - Account</fullName>
                    <default>true</default>
                    <label>Opportunity - Account</label>
                </value>
                <value>
                    <fullName>Opportunity - Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__OwnershipFilter__c</fullName>
        <label>Ownership Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>all</fullName>
                    <default>true</default>
                    <label>all</label>
                </value>
                <value>
                    <fullName>mine</fullName>
                </value>
                <value>
                    <fullName>queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__PercentComplete__c</fullName>
        <label>Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>qbdialer__Prevent_callbacks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Prevent Callbacks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__Priority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>used by Seek initiatives to prioritize queries that are in the same timeblock.</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__QueueOwnership__c</fullName>
        <label>Queue Ownership</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__ReportFolder__c</fullName>
        <label>ReportFolder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__ReportIdColumn__c</fullName>
        <description>Specifies which Id is used from the Report if this Query uses a Report as the Data Source (LEAD_ID, ACCOUNT_ID, CONTACT_ID, OPPORTUNITY_ID, CASE_ID, ACTIVITY_ID)</description>
        <label>Report Id Column</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__ReportId__c</fullName>
        <description>If this query uses a Report as the data source, this column will contain the id of the report used.</description>
        <label>Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__ReportName__c</fullName>
        <description>Used for storing the name of the report in the case where the Data Source for the Dialer Query is a report.</description>
        <label>ReportName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__RingTimeout__c</fullName>
        <defaultValue>45</defaultValue>
        <label>RingTimeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__SeekInitiativeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seek Initiative</label>
        <referenceTo>qbdialer__SeekInitiative__c</referenceTo>
        <relationshipLabel>Dialer Queries</relationshipLabel>
        <relationshipName>Dialer_Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__SmartSort__c</fullName>
        <label>Neural Sort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On</fullName>
                </value>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Sort_Direction_1__c</fullName>
        <label>Sort Direction 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                    <label>ASC</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Sort_Direction_2__c</fullName>
        <label>Sort Direction 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                    <label>ASC</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Sort_Direction_3__c</fullName>
        <label>Sort Direction 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASC</fullName>
                    <default>true</default>
                    <label>ASC</label>
                </value>
                <value>
                    <fullName>DESC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__Sort_Field_1__c</fullName>
        <label>Sort Field 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Sort_Field_2__c</fullName>
        <label>Sort Field 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Sort_Field_3__c</fullName>
        <label>Sort Field 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__StartTime__c</fullName>
        <label>Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Test_Local_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Against Regular Numbers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+14:00) Line Is. Time (Pacific/Kiritimati)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Phoenix Is. Time (Pacific/Enderbury)</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time (Pacific/Tongatapu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Daylight Time (Pacific/Chatham)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Time (Asia/Kamchatka)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Daylight Time (Pacific/Auckland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time (Pacific/Fiji)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:30) Norfolk Time (Pacific/Norfolk)</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Is. Time (Pacific/Guadalcanal)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Lord Howe Summer Time (Australia/Lord_Howe)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Eastern Standard Time (Queensland)</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Eastern Summer Time (New South Wales)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Central Summer Time (South Australia)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Central Standard Time (Northern Territory)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korea Standard Time (Asia/Seoul)</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Hong Kong Time (Asia/Hong_Kong)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Philippines Time (Asia/Manila)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time (Asia/Shanghai)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Singapore Time (Asia/Singapore)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time (Asia/Taipei)</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Western Standard Time (Australia)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Bangkok)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) West Indonesia Time (Asia/Jakarta)</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time (Asia/Saigon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Myanmar Time (Asia/Rangoon)</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Bangladesh Time (Asia/Dacca)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Nepal Time (Asia/Katmandu)</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:30) India Standard Time (Asia/Calcutta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__TimeZones__c</fullName>
        <label>Time Zones</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+03:00) Moscow Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+02:00) Eastern European Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+01:00) Paris Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+00:00) London Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-02:00) South Georgia Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-03:30) Newfoundland Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-04:00) Atlantic Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-05:00) Eastern Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Central Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Pacific Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-09:00) Alaska Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00) Hawaii Standard Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>qbdialer__TotalItemsDialed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Items Dialed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__TotalItems__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__UseSalesforceEmailTemplates__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies whether users of the InsideSales PowerDialer will send emails using templates built in Salesforce or templates built in InsideSales.com</description>
        <inlineHelpText>Specifies whether users of the InsideSales PowerDialer will send emails using templates built in Salesforce or templates built in InsideSales.com.</inlineHelpText>
        <label>Use Salesforce Email Templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__Use_Local_Presence__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Local Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__can_edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qbdialer__datetester__c</fullName>
        <label>datetester</label>
        <type>DateTime</type>
    </fields>
    <label>Dialer Query</label>
    <listViews>
        <fullName>qbdialer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dialer Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>